--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "color": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
