--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.41.3",
     "color": "^5.0.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
