--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@maptiler/client": "^2.5.1",
+    "@maptiler/sdk": "^3.7.0",
     "cloudinary": "^1.41.3",
     "color": "^5.0.0",
     "connect-flash": "^0.1.1",
