--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "joi": "^18.0.1",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
