--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
