--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "client": "cd client && npm run dev",
+    "server": "nodemon app.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm run build",
+    "install:client": "cd client && npm install"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +20,12 @@
     "@exortek/express-mongo-sanitize": "^1.1.0",
     "@maptiler/client": "^2.5.1",
     "@maptiler/sdk": "^3.7.0",
+    "axios": "^1.12.2",
     "cloudinary": "^1.41.3",
     "color": "^5.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
@@ -35,5 +43,9 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "sanitize-html": "^2.17.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.10"
   }
 }
